src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>PO_Number__c</fullName>
        <description>Requested by the Control Tower</description>
        <inlineHelpText>If the order is placed in order system AX, use this field if you have the order system Movex PO number.</inlineHelpText>
        <label>PO Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Case_Owner__c</fullName>
        <label>Previous Case Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <description>The major business units for Dentsply Implants</description>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBU__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Adhesives</fullName>
                </value>
                <value>
                    <fullName>Air Polishing Unit</fullName>
                </value>
                <value>
                    <fullName>Alloy</fullName>
                </value>
                <value>
                    <fullName>Amalgams</fullName>
                </value>
                <value>
                    <fullName>Anesthesia</fullName>
                </value>
                <value>
                    <fullName>Anesthetics</fullName>
                </value>
                <value>
                    <fullName>Articulating SDR Flow</fullName>
                </value>
                <value>
                    <fullName>ATL Abut</fullName>
                </value>
                <value>
                    <fullName>ATL Suprastructures</fullName>
                </value>
                <value>
                    <fullName>Attachments</fullName>
                </value>
                <value>
                    <fullName>Azento</fullName>
                </value>
                <value>
                    <fullName>Bands</fullName>
                </value>
                <value>
                    <fullName>Bite Registration Material</fullName>
                </value>
                <value>
                    <fullName>Bracket</fullName>
                </value>
                <value>
                    <fullName>Burs</fullName>
                </value>
                <value>
                    <fullName>Burs Gates</fullName>
                </value>
                <value>
                    <fullName>CAD/CAM Materials</fullName>
                </value>
                <value>
                    <fullName>CDR</fullName>
                </value>
                <value>
                    <fullName>Cements</fullName>
                </value>
                <value>
                    <fullName>Ceramic Furnaces</fullName>
                </value>
                <value>
                    <fullName>Ceramics</fullName>
                </value>
                <value>
                    <fullName>Clamps</fullName>
                </value>
                <value>
                    <fullName>Composite Material</fullName>
                </value>
                <value>
                    <fullName>Composites &amp; Flowables</fullName>
                </value>
                <value>
                    <fullName>Consumables</fullName>
                </value>
                <value>
                    <fullName>Core &amp; Post</fullName>
                </value>
                <value>
                    <fullName>Couplers</fullName>
                </value>
                <value>
                    <fullName>Crown forms</fullName>
                </value>
                <value>
                    <fullName>Curing Lights</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Milestone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Related_Development_Project__c</field>
                <operation>equals</operation>
                <valueField>Deployment_Status_Phase__c.Project__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Deployment_Status_Phase__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Queue_assigned__c</fullName>
        <formula>Owner:Queue.Id != &quot;&quot;</formula>
        <label>Queue assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quick_Links2__c</fullName>
        <description>For CRM Requests</description>
        <formula>IF (  $User.ProfileId=&quot;00e20000001Ygwu&quot; || $User.ProfileId=&quot;00e20000000kVxk&quot;, 
HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/a?retURL=%2F&quot;&amp;Id&amp;&quot;&amp;newOwn_lkid=&quot;&amp;CreatedById&amp;&quot;&amp;save=1&quot;,&quot;Assign to Original Owner&quot; ,&quot;_self&quot;) &amp;&quot; | &quot;&amp; 
HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/a?retURL=%2F&quot;&amp;Id&amp;&quot;&amp;newOwn=&quot;&amp;$User.Full_Name__c&amp;&quot;&amp;save=1&quot;,&quot;Take Ownership&quot; ,&quot;_self&quot;) 
,&quot;&quot;)</formula>
        <label>Quick Links</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quick_Links__c</fullName>
        <description>Service Complaint Field to display the top page links</description>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/a?retURL=%2F&quot;&amp;Id&amp;&quot;&amp;newOwn=&quot;&amp;$User.Full_Name__c&amp;&quot;&amp;save=1&quot;,&quot;Yourself&quot; ,&quot;_self&quot;)&amp;&quot; | &quot;&amp;
HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/a?retURL=%2F&quot;&amp;Id&amp;&quot;&amp;newOwn_lkid=&quot;&amp;CreatedById&amp;&quot;&amp;save=1&quot;,&quot;Case Creator&quot; ,&quot;_self&quot;)&amp;&quot; | &quot;&amp;
HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/a?retURL=%2F&quot;&amp;Id&amp;&quot;&amp;newOwn_lkid=&quot;&amp;Previous_Case_Owner__c&amp;&quot;&amp;save=1&quot;,&quot;Previous Owner&quot; ,&quot;_self&quot;)

&amp;&quot;&quot;&amp;

IF ( Ispickval(SBU__c,&quot;IMPL&quot;), 
&quot; | &quot;&amp; HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/a?retURL=%2F&quot;&amp;Id&amp;&quot;&amp;newOwn_lkid=00G20000002uPoE&amp;save=1&quot;,&quot;ATL Abut 2nd&quot; ,&quot;_self&quot;) &amp;&quot; | &quot;&amp;
HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/a?retURL=%2F&quot;&amp;Id&amp;&quot;&amp;newOwn_lkid=00G20000002uV5R&amp;save=1&quot;,&quot;ATL Supra 2nd&quot; ,&quot;_self&quot;) &amp;&quot; | &quot;&amp;
HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/a?retURL=%2F&quot;&amp;Id&amp;&quot;&amp;newOwn_lkid=00G0J000003H1b0&amp;save=1&quot;,&quot;Azento Support 2nd&quot; ,&quot;_self&quot;)&amp;&quot; | &quot;&amp;
HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/a?retURL=%2F&quot;&amp;Id&amp;&quot;&amp;newOwn_lkid=00G200000013cad&amp;save=1&quot;,&quot;Simplant 2nd&quot; ,&quot;_self&quot;) &amp;&quot; | &quot;&amp;
HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/a?retURL=%2F&quot;&amp;Id&amp;&quot;&amp;newOwn_lkid=00G20000002uPo9&amp;save=1&quot;,&quot;Control Tower&quot; ,&quot;_self&quot;) &amp;&quot; | &quot;&amp;
HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/a?retURL=%2F&quot;&amp;Id&amp;&quot;&amp;newOwn_lkid=00G20000002uPoJ&amp;save=1&quot;,&quot;Venlo Warehouse&quot; ,&quot;_self&quot;)

	,&quot;&quot;)

&amp;&quot;&quot;&amp;

IF ( Ispickval(Product_Line__c,&quot;SureSmile&quot;), 
&quot; | &quot;&amp; HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/a?retURL=%2F&quot;&amp;Id&amp;&quot;&amp;newOwn_lkid=00G6M000004GUcD&amp;save=1&quot;,&quot;SureSmile Global Support&quot; ,&quot;_self&quot;) &amp;&quot; | &quot;&amp;
HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/a?retURL=%2F&quot;&amp;Id&amp;&quot;&amp;newOwn_lkid=00G6M000004GUby&amp;save=1&quot;,&quot;SureSmile Berlin Support&quot; ,&quot;_self&quot;) 
	,&quot;&quot;)</formula>
        <label>Assign To (Quick Links)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main RCO (TBD)</label>
        <referenceTo>RCO_Information__c</referenceTo>
        <relationshipLabel>CRM Requests</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rebill_Order_Amount__c</fullName>
        <label>Rebill Order Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rebill_Order_Number__c</fullName>
        <label>Rebill Order Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedAccounts__c</fullName>
        <description>Number of Related Accounts to the case</description>
        <label>Related Accounts</label>
        <summaryForeignKey>CaseAccountRole__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Related_Deployment_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Deployment Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Deployment</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>CRM Requests</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Development_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Development Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Design &amp; Development</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>CRM Requests</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReleaseDate__c</fullName>
        <description>CRM Request Release Date</description>
        <inlineHelpText>CRM Request Release Date</inlineHelpText>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Sub_Type__c</fullName>
        <label>Request Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Request_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Receivables</fullName>
                </value>
                <value>
                    <fullName>Accounts/Contacts</fullName>
                </value>
                <value>
                    <fullName>Account Strategy</fullName>
                </value>
                <value>
                    <fullName>Campaigns</fullName>
                </value>
                <value>
                    <fullName>CFECalendar</fullName>
                    <label>CFE/Calendar</label>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
                <value>
                    <fullName>Contracts</fullName>
                </value>
                <value>
                    <fullName>Credits and Rebills</fullName>
                </value>
                <value>
                    <fullName>CRM Analyst Training</fullName>
                </value>
                <value>
                    <fullName>Dealer Sell Out Data</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
                <value>
                    <fullName>End-User Training</fullName>
                </value>
                <value>
                    <fullName>End-User Training Support</fullName>
                </value>
                <value>
                    <fullName>ETM / Sharing Rules</fullName>
                </value>
                <value>
                    <fullName>Field Access</fullName>
                </value>
                <value>
                    <fullName>Go-Live Support</fullName>
                </value>
                <value>
                    <fullName>IntegrationIssue</fullName>
                    <label>Integration Issue</label>
                </value>
                <value>
                    <fullName>LMS</fullName>
                </value>
                <value>
                    <fullName>Mass Email</fullName>
                </value>
                <value>
                    <fullName>Mass Update/Insert</fullName>
                </value>
                <value>
                    <fullName>Merging Records</fullName>
                </value>
                <value>
                    <fullName>New/Update Users</fullName>
                </value>
                <value>
                    <fullName>Object Access</fullName>
                </value>
                <value>
                    <fullName>Opportunities/Account Plans</fullName>
                </value>
                <value>
                    <fullName>Order Management</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Page Layout</fullName>
                </value>
                <value>
                    <fullName>Permission Set</fullName>
                </value>
                <value>
                    <fullName>Picklist/Field Update</fullName>
                </value>
                <value>
                    <fullName>Products/Price Books</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Question/Request for help</fullName>
                </value>
                <value>
                    <fullName>Bug/Issue with existing functionality</fullName>
                </value>
                <value>
                    <fullName>New Functionality/Feature (development)</fullName>
                </value>
                <value>
                    <fullName>Enable existing functionality</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>New Licenses</fullName>
                </value>
                <value>
                    <fullName>Bug / General Question</fullName>
                    <isActive>false</isActive>
                    <label>Bug / General Question</label>
                </value>
                <value>
                    <fullName>Data Management</fullName>
                    <isActive>false</isActive>
                    <label>Data Management</label>
                </value>
                <value>
                    <fullName>Deployment Request</fullName>
                    <isActive>false</isActive>
                    <label>Deployment Request</label>
                </value>
                <value>
                    <fullName>ETM &amp;  Acces Support</fullName>
                    <isActive>false</isActive>
                    <label>ETM &amp;  Access Support</label>
                </value>
                <value>
                    <fullName>New APEX / Integration Request</fullName>
                    <isActive>false</isActive>
                    <label>New APEX / Integration Request</label>
                </value>
                <value>
                    <fullName>New Function/Project</fullName>
                    <isActive>false</isActive>
                    <label>New Function/Project</label>
                </value>
                <value>
                    <fullName>WAVE</fullName>
                    <isActive>false</isActive>
                    <label>WAVE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResponsibleFunction__c</fullName>
        <description>The team that responsible for error</description>
        <label>Responsible Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ResponsibleFunction</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Responsible_for_Error__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible for Error</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_Tracking_Number__c</fullName>
        <label>Return Tracking Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returned_Product_Received_Date__c</fullName>
        <label>Returned Product Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Returns_Processing_Time_Rec_to_Closed__c</fullName>
        <formula>ClosedDate - Returned_Product_Received_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Returns Proc.Time (Days): Rec. to Closed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAPCreatedDate__c</fullName>
        <label>SiroForce Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SAPId__c</fullName>
        <externalId>true</externalId>
        <label>SAP Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <description>Use only for Service Complaint</description>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBU</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLAStatusImage__c</fullName>
        <description>Used to display an image (Green,Orange or Red) flag, based on the SLA status</description>
        <formula>IMAGE
(
IF( ISPICKVAL(SLAStatus__c,&quot;Red&quot;),
&quot;/img/samples/flag_red.gif&quot;,
IF( ISPICKVAL(SLAStatus__c,&quot;Orange&quot;),
&quot;/img/samples/flag_yellow.gif&quot;,
&quot;/img/samples/flag_green.gif&quot;
)
),
&quot;&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLAStatus__c</fullName>
        <description>Used to identify the milestone status, If the status is Red then this indicates that the milestone has been violated, If its Orange then the milestone is about being violated after a while and if its Green then still there is enough time for the CS agent to handle the case.</description>
        <label>SLA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                    <label>Green</label>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SiroforceEMailAddress__c</fullName>
        <label>Contact Person E-Mail Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiroforcePartner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>CasesSiroforcePartner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Record_Info__c</fullName>
        <description>Can be added to layout upon request, now it&apos;s used in the service cloud flow to pull the information directly from the case instead of the source record object</description>
        <formula>Source_Record__r.Combined_Fields__c</formula>
        <label>Source Record Info</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Record</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Source_Record__c.CIM_Account__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Source_Record__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Case__c</fullName>
        <description>Checks if the case is created by a CRM Analyst or not, used in view lists, reports filters</description>
        <formula>IF(

((Contains(CreatedBy.Profile__c,&quot;National&quot;)
||
Contains(CreatedBy.Profile__c,&quot;Analyst&quot;)) ||  ISPICKVAL( Origin,&quot;Support Email&quot;) ||   Owner:User.Id=&quot;00520000003K254&quot;) &amp;&amp; Not(ispickval( Request_Type__c ,&quot;Deployment Request&quot;))



,True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checks if the case is created by a CRM Analyst or not</inlineHelpText>
        <label>Support Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Support_Email__c</fullName>
        <label>Support Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Keyword__c</fullName>
        <label>Support Keyword</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Digital_Product__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1-1-1-1</fullName>
                </value>
                <value>
                    <fullName>3D view</fullName>
                </value>
                <value>
                    <fullName>Address Change</fullName>
                </value>
                <value>
                    <fullName>ASA Issue</fullName>
                </value>
                <value>
                    <fullName>Bad Install/Corrupt</fullName>
                </value>
                <value>
                    <fullName>Beta</fullName>
                </value>
                <value>
                    <fullName>Bite/Global</fullName>
                </value>
                <value>
                    <fullName>Bracket Export Activation</fullName>
                </value>
                <value>
                    <fullName>Bracket Library</fullName>
                </value>
                <value>
                    <fullName>Broken</fullName>
                </value>
                <value>
                    <fullName>Broken Tray</fullName>
                </value>
                <value>
                    <fullName>CAD tools</fullName>
                </value>
                <value>
                    <fullName>Canal Definition</fullName>
                </value>
                <value>
                    <fullName>Cancellation Request</fullName>
                </value>
                <value>
                    <fullName>Cannot Find</fullName>
                </value>
                <value>
                    <fullName>Cannot Order</fullName>
                </value>
                <value>
                    <fullName>Carestream/Orthotrac</fullName>
                </value>
                <value>
                    <fullName>Case Approval</fullName>
                </value>
                <value>
                    <fullName>Case creation</fullName>
                </value>
                <value>
                    <fullName>Cavity Access</fullName>
                </value>
                <value>
                    <fullName>CBCT Validation</fullName>
                </value>
                <value>
                    <fullName>Cephalometry</fullName>
                </value>
                <value>
                    <fullName>Certification</fullName>
                </value>
                <value>
                    <fullName>Charts Submissions</fullName>
                </value>
                <value>
                    <fullName>Class Dates</fullName>
                </value>
                <value>
                    <fullName>Clinical Support</fullName>
                </value>
                <value>
                    <fullName>Cloud9</fullName>
                </value>
                <value>
                    <fullName>Complaint Investigation</fullName>
                </value>
                <value>
                    <fullName>Composition Tool</fullName>
                </value>
                <value>
                    <fullName>Computer Powered Off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TF_Migrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical field to confirm the migration to new case classifications</description>
        <label>TF_Migrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TF_NewOwnerNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Updated through the Case: Create Case ver2 flow and used in the Case process builder</description>
        <label>TF_NewOwnerNotification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Teamforce_Product__c</fullName>
        <description>Add to which &quot;Product&quot; offered by the CRM team the request is related to</description>
        <inlineHelpText>Add to which &quot;Product&quot; offered by the CRM team the request is related to</inlineHelpText>
        <label>Teamforce Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Teamforce_Products</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TrackWise_Comment__c</fullName>
        <label>TrackWise Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TrackWise_ID__c</fullName>
        <label>TrackWise ID (PR ID)</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tracking_number__c</fullName>
        <label>Tracking Number</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Return</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Credit/Rebill</fullName>
                </value>
                <value>
                    <fullName>Shipping Credits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Country__c</fullName>
        <label>User Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>BEX</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Cameroun</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>DEX</fullName>
                </value>
                <value>
                    <fullName>Distributor Markets</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Estonia</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Holland</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>HQ: DE</fullName>
                </value>
                <value>
                    <fullName>HQ: NL</fullName>
                </value>
                <value>
                    <fullName>HQ: SE</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VoicemailLeft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ticked when the case status is waiting for customer feedback</description>
        <label>Voicemail Left/Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WeekDay__c</fullName>
        <description>A help field to tag the case with the Weekday, used in reports to show stats of cases per weekday.</description>
        <formula>Case(WEEKDAY( Datevalue(CreatedDate) ),7, &quot;Saturday&quot;, 1, &quot;Sunday&quot;, 2,&quot;Monday&quot;, 3, &quot;Tuesday&quot;, 4, &quot;Wednesday&quot;, 5, &quot;Thursday&quot;, 6,&quot;Friday&quot;,&quot;&quot;)</formula>
        <inlineHelpText>Not to e included in the layout</inlineHelpText>
        <label>WeekDay</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>case_id_text__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>case id text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Geocode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Reference to the Geocode object holding all of mapping information for the record.</inlineHelpText>
        <label>Geocode</label>
        <referenceTo>geopointe__Geocode__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Approved_Article_Numbers__c</fullName>
        <label># of Approved Article Numbers</label>
        <summarizedField>Article__c.of_Approved_Article_Numbers__c</summarizedField>
        <summaryForeignKey>Article__c.Related_Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Article_Numbers__c</fullName>
        <label># of Article Numbers</label>
        <summaryForeignKey>Article__c.Related_Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Salesforce_Licenses_Needed__c</fullName>
        <label># of Salesforce Licenses Needed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>